--- a/Develop/Style/friends.css
+++ b/Develop/Style/friends.css
@@ -1,7 +1,8 @@
-body {
-  background-color: #003366;
-}
 
+body {
+  background-image: url ("scott-webb-obKbq4Z3cuA-unsplash.jpg");
+  
+ }
 
 .center {
   display: block;
@@ -19,6 +20,7 @@ body {
 
   
 }
+
 
 
 p {
