--- a/Develop/Style/friends.css
+++ b/Develop/Style/friends.css
@@ -2,6 +2,10 @@
 
 body {
   background-color: orange;
+  background-image: url("download.jpg") ;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
   
  }
 
