--- a/Develop/Style/style.css
+++ b/Develop/Style/style.css
@@ -5,6 +5,7 @@ body {
   /* background-position: right; */
   background-position: right bottom, left bottom;
   background-size: 40%;
+  font-family: courier,arial,helvetica;
 
 }
 
