--- a/Develop/Style/style.css
+++ b/Develop/Style/style.css
@@ -40,17 +40,23 @@ body {
 
 .cancelbtn, .saveUserbtn, .uk-button {
   background-color: #762766;
-
-
 }
 
+.cancelbtn, .saveUserbtn {
+  color: white;
+  background-color: #762766;
+}
+
+.clearfix {
+  padding-top: 10px;
+}
 
 progress{
     border: black;
     width: 20px;
     height: 20px;
     background-color: white;
-    float: 
+    /* float:  */
 }
 
 .adorable-avatar {
@@ -62,7 +68,7 @@ progress{
 .uk-button-default { 
     background-color: #f2ba32;
     margin-top: 90px;
-    margin-right: 50px
+    margin-right: 50px;
     color: white;
     border-color: #ea5455;
    } 
@@ -88,19 +94,4 @@ progress{
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
   }
