--- a/Develop/Style/challenge.css
+++ b/Develop/Style/challenge.css
@@ -26,4 +26,5 @@ h1, p, .bigFear, #changeFear1, .chosenFear, #saveFear{
 
 .wellDoneHeader {
     text-align: center;
+    font-family: courier,arial,helvetica;
 }
